<resources>
    <string name="app_name">Basic QR Scanner</string>
    <string name="action_settings">Settings</string>

    <string name="error_no_qr_found">No QR codes found.</string>
    <string name="error_barcode_detector_not_operational">Barcode detector not operational.</string>
    <string name="error_camera_permission_denied">Camera permission denied.</string>
    <string name="error_vibrate_permission_denied">Vibration permission denied.</string>

    <string name="scan_directions">Point camera toward QR code to scan.</string>

    <string name="info_dialog_save">SAVE</string>
    <string name="info_dialog_cancel">CANCEL</string>

    <string name="format_info_qr_type">Type: %1$s</string>
    <string name="info_type_text">Text</string>
    <string name="info_type_url">URL</string>
    <string name="info_type_email">email</string>
    <string name="info_type_phone">Phone Number</string>
    <string name="info_type_unknown">Unknown</string>

    <string name="placeholder_no_text">No displayable text.</string>
    <string name="pref_key_camera_fps">fps_preference</string>
    <string name="pref_title_camera_fps">Camera FPS</string>
    <string name="pref_summary_camera_fps">The framerate of the camera preview.</string>
    <string name="pref_key_face_preference">face_preference</string>
    <string name="pref_title_face_preference">Camera Facing</string>
    <string name="pref_switch_off_face_preference">Back</string>
    <string name="pref_switch_on_face_preference">Front</string>
    <string name="pref_summary_off_face_preference">Back Camera On</string>
    <string name="pref_summary_on_face_preference">Front Camera On</string>
    <string name="pref_key_autofocus_preference">autofocus_preference</string>
    <string name="pref_title_autofocus_preference">Auto Focus</string>

</resources>
